<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_len_30px"
        android:paddingTop="@dimen/common_len_30px"
        android:paddingRight="@dimen/common_len_30px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/splash_user_privacy_title"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/common_len_36px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/splash_privacy_title1"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/common_len_26px"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/user_permission_string"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/common_len_26px" />
            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/user_permission_tip2"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/common_len_26px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_len_1px"
        android:background="@color/color_20_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_len_100px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/privacy_exit_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/splash_give_up_title"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/common_len_32px" />

        <View
            android:layout_width="@dimen/common_len_1px"
            android:layout_height="match_parent"
            android:background="@color/color_20_black" />

        <TextView
            android:id="@+id/privacy_ok_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/splash_ok_title"
            android:textColor="@color/color_FF3838"
            android:textSize="@dimen/common_len_32px" />
    </LinearLayout>
</LinearLayout>